--- a/src/templates/pages/work/mena.html
+++ b/src/templates/pages/work/mena.html
@@ -47,23 +47,25 @@ description: Site Design and Build
           <div class="caption">Style Direction</div>
         </div>
 
-        <p>Design Prototype</p>
+        <div class="card">
+          <p>Design Prototype</p>
 
-        <div class="button-group">
-          <a
-            href="/demo/mena.wires/index.php"
-            class="button button--primary"
-            >View Prototype</a
-          >
-        </div>
+          <div class="button-group">
+            <a
+              href="/demo/mena.wires/index.php"
+              class="button button--primary"
+              >View Prototype</a
+            >
+          </div>
 
-        <div class="credits">
-          <p class="attribution">Work done at Raskyl</p>
-          <ul class="team-list">
-            <li>Kyle Langford: Designer, Developer</li>
-            <li>Rachel Sorkin: Project Manager</li>
-          </ul>
-          <p class="last-edit">Last Edit: 5.30.19</p>
+          <div class="credits">
+            <p class="attribution">Work done at Raskyl</p>
+            <ul class="team-list">
+              <li>Kyle Langford: Designer, Developer</li>
+              <li>Rachel Sorkin: Project Manager</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>  
         </div>
       </article>
     </div>
