--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -20,6 +20,8 @@ description: Site Design and Build
           <div class="caption">Screenshot</div>
         </div>
 
+        <!-- Goals -->
+
         <p>
           My accomplishments for this project include crafting a process
           from research to development. I designed reusable components and
@@ -29,6 +31,10 @@ description: Site Design and Build
           front-end production code, much of which was recycled from the
           prototype.
         </p>
+
+        <!-- Defining process -->
+        
+        <!-- Design that mirrored development -->
 
         <div class="specimen">
           <img
@@ -93,7 +99,7 @@ description: Site Design and Build
           <div class="caption">Near Final Sitemap.</div>
         </div>
 
-        <div class="specimen">
+        <div class="specimen stretch">
           <div class="stack">
             <img
               src="../assets/img/projects/paw/cpw-01.jpg"
@@ -185,7 +191,7 @@ description: Site Design and Build
         </p>
 
         <p>Wireframes</p>
-        <div class="specimen">
+        <div class="specimen stretch">
           <div class="stack">
             <img
               src="../assets/img/projects/paw/cpw-10.jpg"
@@ -216,7 +222,7 @@ description: Site Design and Build
         </div>
 
         <p>Article Page</p>
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
             src="../assets/img/projects/paw/wireframe-rwd-article-page.png"
             alt="Elephant at sunset"
@@ -257,24 +263,26 @@ $(elem).appendTo('.header-region').load("inc/header.html");
           links.
         </p>
 
-        <div class="text--center button-group">
-          <a
-            href="/demo/paw.wires/index.html"
-            class="button button--primary"
-            >View Prototype</a
-          >
-          <a href="https://paw.princeton.edu" class="button">Live Site</a>
-        </div>
+        <div class="card">
+          <div class="text--center button-group">
+            <a
+              href="/demo/paw.wires/index.html"
+              class="button button--primary"
+              >View Prototype</a
+            >
+            <a href="https://paw.princeton.edu" class="button">Live Site</a>
+          </div>
 
-        <div class="credits">
-          <p class="attribution">Work done at Brunello, Inc.</p>
-          <ul class="team-list">
-            <li>Jason Fournier: Designer</li>
-            <li>Kyle Langford: Designer, Front-End Developer</li>
-            <li>Mike Calebrese: Drupal Developer</li>
-            <li>Nicole Baltzer: PM</li>
-          </ul>
-          <p class="last-edit">Last Edit: 5.30.19</p>
+          <div class="credits">
+            <p class="attribution">Work done at Brunello, Inc.</p>
+            <ul class="team-list">
+              <li>Jason Fournier: Designer</li>
+              <li>Kyle Langford: Designer, Front-End Developer</li>
+              <li>Mike Calebrese: Drupal Developer</li>
+              <li>Nicole Baltzer: PM</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
         </div>
       </article>
     </div>
