--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -1,9 +1,7 @@
 <header class="container size-to-window intro masthead {{page}}">
   <div class="row flex flex-align--center flex--justify fill-height">
     <nav class="position-top-left">
-      <a href="/work/all.html" class="button--previous"
-        ><span class="icons-skip-back"></span>$ cd ..</a
-      >
+      <a href="/work/all.html" class="button--previous">$ cd ..</a>
     </nav>
     <div class="column half text--center">
       <h1 class="page__title">{{title}}</h1>
