--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -19,6 +19,18 @@ $gray: #d9d9d9 !default;
 $medium-gray: #cacaca !default;
 $dark-gray: #aaaaaa !default;
 
+// Default Mobile Breakpoints
+// $tiny-screen: rem(360) !default;
+// $small-screen: rem(479) !default;
+// $small-plus-screen: rem(599) !default;
+// $medium-screen: rem(640) !default;
+// $medium-plus-screen: rem(768) !default;
+// $large-screen: rem(960) !default;
+// $large-plus-screen: rem(1080) !default;
+// $full-screen: rem(1200) !default;
+// $jumbo-screen: rem(1440) !default;
+// $site-max: rem(1536) !default;
+
 $scrap-green: #40a880;
 $cyber-green: #52dfb4;
 $twilight: #273269;
