--- a/src/templates/pages/bookmarks.html
+++ b/src/templates/pages/bookmarks.html
@@ -1,9 +1,7 @@
 <header class="container size-to-window bookmarks">
   <div class="row flex flex-align--center flex--justify fill-height">
     <nav class="position-top-left">
-      <a href="/" class="button--previous"
-        ><span class="icons-skip-back"></span>Back</a
-      >
+      <a href="/" class="button--previous">$ cd ..</a>
     </nav>
 
     <div class="column half text--center">
