--- a/src/templates/pages/lp/content-strategy.html
+++ b/src/templates/pages/lp/content-strategy.html
@@ -1,6 +1,6 @@
 ---
-title: Healthly Living Engine
-description: Multisite Theming
+title: Guideposts
+description: Site Design and Build
 ---
 
 {{> header}}
@@ -9,35 +9,19 @@ description: Multisite Theming
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Design System</h4>
+        <h4>Content is King</h4>
 
         <p>
-          <strong>Drupal Multisite</strong>
+          <strong>Bicycling</strong>
         </p>
 
         <p>
-          <strong>Theme Arch</strong>
-        </p>
-
-        <p>
-          <strong>CSS</strong>
-        </p>
-
-        <p>
-          <strong>Client Side</strong>
-        </p>
-
-        <p>
-          <strong>Menu</strong>
-        </p>
-
-        <p>
-          <strong>Admin Side</strong>
+          <strong>Guideposts</strong>
         </p>
 
 
         <p>
-          <strong>Old Versions</strong>
+          <strong>Sitemaps</strong>
         </p>
 
 
