--- a/src/templates/pages/lp/moodboards.html
+++ b/src/templates/pages/lp/moodboards.html
@@ -12,7 +12,11 @@ description: Site Design and Build
         <h4>Content is King</h4>
 
         <p>
-          <strong>Wireframes</strong>
+          <strong>BRM</strong>
+        </p>
+
+        <p>
+          <strong>Mena</strong>
         </p>
 
         <div class="credits">
