--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -15,13 +15,13 @@
     <div class="column two-thirds">
       <ul class="list portfolio">
         <li class="list__item">
-          <a href="/work/brm.html">
+          <a href="/work/brm">
             <span class="label">Bally Ribbon Mills</span>
             <p>Site design and Drupal build.</p>
           </a>
         </li>
         <li class="list__item">
-          <a href="/work/cpl.html">
+          <a href="/work/cpl">
             <span class="label">Cambridge Public Library</span>
             <p>
               Enviromental Signage and Wayfinding.
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="list__item">
-          <a href="/work/fitnessapp.html">
+          <a href="/work/fitnessapp">
             <span class="label">Elev8d Fitness</span>
             <p>
               Angular Video Component and Playlist.
@@ -37,13 +37,13 @@
           </a>
         </li>
         <li class="list__item">
-          <a href="/work/mena.html">
+          <a href="/work/mena">
             <span class="label">Mass. Emergency Nurse Association</span>
             <p>Site design and Drupal build.</p>
           </a>
         </li>
         <li class="list__item">
-          <a href="/work/paw.html">
+          <a href="/work/paw">
             <span class="label">Princeton Alumni Magazine</span>
             <p>Site Design and Drupal build.</p>
           </a>
