--- a/src/templates/pages/work/mena.html
+++ b/src/templates/pages/work/mena.html
@@ -20,7 +20,7 @@ description: Site Design and Build
           features based on that.
         </p>
 
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
             src="../assets/img/projects/mena/maena-moodboard_v2d.png"
             alt="Elephant at sunset"
@@ -47,26 +47,24 @@ description: Site Design and Build
           <div class="caption">Style Direction</div>
         </div>
 
-        <div class="card">
-          <p>Design Prototype</p>
+        <p>Design Prototype</p>
 
-          <div class="button-group">
-            <a
-              href="/demo/mena.wires/index.php"
-              class="button button--primary"
-              >View Prototype</a
-            >
-          </div>
-
-          <div class="credits">
-            <p class="attribution">Work done at Raskyl</p>
-            <ul class="team-list">
-              <li>Kyle Langford: Designer, Developer</li>
-              <li>Rachel Sorkin: Project Manager</li>
-            </ul>
-            <p class="last-edit">Last Edit: 5.30.19</p>
-          </div>  
+        <div class="button-group">
+          <a
+            href="/demo/mena.wires/index.php"
+            class="button button--primary"
+            >View Prototype</a
+          >
         </div>
+
+        <div class="credits">
+          <p class="attribution">Work done at Raskyl</p>
+          <ul class="team-list">
+            <li>Kyle Langford: Designer, Developer</li>
+            <li>Rachel Sorkin: Project Manager</li>
+          </ul>
+          <p class="last-edit">Last Edit: 5.30.19</p>
+        </div>  
       </article>
     </div>
   </div>
