--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -172,12 +172,12 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <p class="list-title">Links</p>
       <ul class="pretty">
         <li class="list__item">
-          <a href="/bookmarks.html"
+          <a href="/bookmarks"
             ><span class="icon-list icons-bookmark"> </span>Bookmarks</a
           >
         </li>
-        <li class="list__item">
-          <a href="/work/all.html"
+<!--         <li class="list__item">
+          <a href="/work/all"
             ><span class="icon-list icons-lock"></span>Portfolio</a
           >
         </li>
@@ -185,7 +185,7 @@ description: My name is Kyle Langford, and this is my Web Design and Development
           <a href="/assets/resume/klangford_2019.pdf"
             ><span class="icon-list icons-download-cloud"></span>Resume</a
           >
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
